--- a/historia1.html
+++ b/historia1.html
@@ -8,7 +8,11 @@
     </head>
     <body>
         <nav>
-            <a href="index.html"></a>
+            <a href="index.html"> <svg widgth="200" hegith="80">
+                <rect x="45" y="5" fill="#3F6797" width="60" height="30" rx="5" id="form1"></rect>
+                <rect x="50" y="10" fill="#B1D5E4" width="50" height="25" rx="5" id="form2"></rect>
+                <polygon points="55 45, 95 45, 115 62, 30 62" fill="#3F6797" id="cont1"></polygon>
+                <polygon points="57 48, 92 48, 104 58, 43 58" fill="#B1D5E4" id="cont2"></polygon></svg></a>
             <ul class="botonera">
                 <li class="botones"><a class="opcion" href="historia1.html">HISTORIA</a></li>
                 <li class="botones"><a class="opcion" href="juguemos1.html">JUGUEMOS</a></li>
@@ -76,13 +80,14 @@
                     <button id="pause" class="botonesVideo"><img src="./assets/imagenes/pausa.svg" alt="Pausa del Video"></button>                
                 </div>
 
-                <div id="tiempo_video"></div>
+                <p>Duracion del video:</p>
             </div>
         </section>
         </article>
 
         <footer>
             <div class="pagina_pie">
+                <img src="./assets/imagenes/logo.svg" alt="logo">
                 <h3 class="programacion_historia">PROGRAMACION</br>
                     E</br>
                     HISTORIA</h3>
